  converts back the signal number returned by [sigwait] to an
  OS-independent number
  (Jérémie Dimino)

- GPR#600: (similar to GPR#555) ensure that register typing constraints are
  respected at N-way join points in the control flow graph
  (Mark Shinwell)

- GPR#672: Fix float_of_hex parser to correctly reject some invalid forms
  (Bogdan Tătăroiu, review by Thomas Braibant and Alain Frisch)


### Internal/compiler-libs changes:

- PR#7200, GPR#539: Improve, fix, and add test for parsing/pprintast.ml
  (Runhang Li, David Sheets, Alain Frisch)

- GPR#351: make driver/pparse.ml functions type-safe
  (Gabriel Scherer, Dmitrii Kosarev, review by Jérémie Dimino)

- GPR#516: Improve Texp_record constructor representation, and
  propagate updated record type information
  (Pierre Chambart, review by Alain Frisch)

- GPR#679: delay registration of docstring after the mapper is applied
  (Hugo Heuzard, review by Leo White)

- GPR#678: Graphics.close_graph crashes 64-bit Windows ports (re-implementation
  of PR#3963)
  (David Allsopp)

### Documentation:


OCaml 4.03.0 (25 Apr 2016):
---------------------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- PR#5528: inline records for constructor arguments
  (Alain Frisch)

- PR#6220, PR#6403, PR#6437, PR#6801:
  Improved redundancy and exhaustiveness checks for GADTs.
  Namely, the redundancy checker now checks whether the uncovered pattern
  of the pattern is actually inhabited, exploding at most one wild card.
  This is also done for exhaustiveness when there is only one case.
  Additionally, one can now write unreachable cases, of the form
  "pat -> .", which are treated by the redundancy check.
  (Jacques Garrigue)

- PR#6374: allow "_ t" as a short-hand for "(_, _, ..) t" for n-ary type
  constructors
  (Alain Frisch)

- PR#6714: allow [@@ocaml.warning] on most structure and signature items:
  values, modules, module types
  (whitequark)
